tests/lean/attributes.lean.expected.out
attributes.lean:4:0: error: cannot remove attribute [reducible]
attributes.lean:8:0: error: cannot remove attribute [instance]
